# UniversalPIDMotorControl

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  G431CBU_CONTROL_PROJECT.ioc  STM32G431CBUX_FLASH.ld  compile_commands.json
Core/Inc/: AimingControlModule.h  AimingMonitoringStruct.h  AimingRegimStruct.h  AimingSignalStruct.h  ControlDataStructs.h  DataStorageEngine.h  DataStructs.h  DebugSerialInterface.h  FreeRTOSConfig.h  GenereicSignalControl.h  GenericEngineControl.h  GenericSignalControl.h  MESSAGE.h  MessageIterator.h  MotorControlCommandStruct.h  PIDParamStruct.h  PID_FilterClass.h  PWMControlInterface.h  RemoteControlInterface.h  TASK.h  TCPInterface.h  TCPInterface.hpp  TCPInterfaceW5500.hpp  VoltageControlInterface.h  W5500ReadWriteInterface.h  main.h  main.hpp
Core/Src/: AimingControlModule.cpp  DataStorageEngine.cpp  DebugSerialInterface.cpp  GenericEngineControl.cpp  GenericSignalControl.cpp  MessageIterator.cpp  PID_FilterClass.cpp  RemoteControlInterface.cpp  TCPInterface.cpp  TCPInterfaceW5500.hpp  W5500ReadWriteInterface.c  main.cpp  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Drivers/ETHERNET/: socket.c  socket.h
Drivers/ETHERNET/w5500/: w5500.h
cmake/: st-project.cmake
